# csnake

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.mk  configure
include/: config.h  config.h.in  food.h  input.h  platform.h  player.h  screen.h  sleep.h
include/platform/: game.h  getch.h  screen.h  thread.h
src/: input.c  main.c  platform.c  player.c  screen.c  sleep.c
src/platform/: game.c  getch.c
templates/: config.h.in  config.mk.in
